syntax = "proto3";

package auth_proto.v1;

service auth{
  // rpc GetUserToken(GetUserTokenRequest) returns(GetUserTokenResponse) {}
  // rpc CreateCourse(CreateCourseRequest) returns(CreateCourseResponse) {}
  
  rpc CurrencyAdd(CurrencyAddRequest) returns(CurrencyAddResponse) {}
  rpc Currencyremove(CurrencyRemoveRequest) returns(CurrencyRemoveResponse) {}
  rpc CurrencyPrice(CurrencyPriceRequest) returns(CurrencyPriceResponse) {}
}


// // USER
// message GetUserTokenRequest{
//   string login = 1;
//   string password = 2;
// }
// message GetUserTokenResponse{
//   string accessToken = 1;
//   string refreshToken = 2;
// }

// // COURSE
// message CreateCourseRequest{
//   Course course = 1;
// }
// message CreateCourseResponse{
//   string status = 1;
// }
// message Course{
//   string title = 1;
//   string description = 2;
//   string category = 3;
//   string thumbnailUrl = 4;
//   int32 price = 5;
// }

// Currency
message CurrencyAddRequest{
  string currencyPair=1;
}
message CurrencyAddResponse{
  string status=1;
}

message CurrencyRemoveRequest{
  string currencyPair=1;
}
message CurrencyRemoveResponse{
  string status=1;
}

message CurrencyPriceRequest{
  string currencyPair=1;
  int64 timestamp=2;
}
message CurrencyPriceResponse{
  string price=1;
} 